# legendary-journey

./: CMakeLists.txt  README.md  attack.cpp  attack.h  audio.cpp  audio.h  enemies.cpp  enemies.h  enemy.cpp  enemy.h  grid.cpp  grid.h  guy.cpp  guy.h  health.cpp  health.h  main  main.cpp  main.wasm  maps.json  menu.cpp  menu.h  objects.cpp  objects.h  text.txt  world.cpp  world.h
maps/: maps.json  newmap.json  newtrees.json  trees.json
sprites/: test.tmj
